src/test/resources/rules/success/IndentationCheck.java
package rules.success;

public class IndentationCheck {
    public void method() {
        String tab = "tab used";
        tab.isEmpty();
    }
}
